# fifteen-puzzle

./: .gitignore  CMakeLists.txt  README.md
include/: game.h
src/: fifteen.c  fifteen.h  game.c  main.c
